# chronos

./: .gitignore  HYS14 — Timing Diagnostic.md  README.md  issue1.md  pyproject.toml
chronfix/: .gitignore  DESIGN.md  README.md  __init__.py
chronfix/scripts/: correct_hys14.py  filter_and_triggers.py
chronfix/src/chronfix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
diagnostics/: ballistic_dt.py  ccf_plot.py  combine_clock.py  combine_clock_hourly.py  hys_ccf.py  peak_lag_hourly.py
docs/: Chronos — Implementation Plan.md  HYS14 — Correction Method.md
scripts/: download_hys.py
src/chronos/: __init__.py
src/chronos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/chronos/scripts/: _peak_lag_daily.py  _realign_ccf.py  combine_clock.py  compute_ccf.py  download_data.py  filter_and_triggers.py
tests/: regen_v1_filter_plot.py  regenerate_example_figures.py  test_resample_vs_intshift.py  test_smoothed_dt.py  test_v3_residuals.py  test_witness_day.py  test_witness_endtoend.py
