[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos"
version = "0.1.0"
description = "Detect timing errors in seismic data via ambient-noise cross-correlation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Maleen Kidiwela", email = "seismic@uw.edu"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "obspy>=1.5",
    "matplotlib>=3.5",
]

[project.scripts]
chronos-download         = "chronos.scripts.download_data:main"
chronos-compute-ccf      = "chronos.scripts.compute_ccf:main"
chronos-peak-lag         = "chronos.scripts.compute_peak_lag:main"
chronos-combine-clock    = "chronos.scripts.combine_clock:main"
chronos-filter           = "chronos.scripts.filter_and_triggers:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chronos*"]
